# papis-uefiscdi

./: .gitignore  MANIFEST.in  Makefile  README.rst  REUSE.toml  justfile  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.txt  requirements.txt
.ci/: requirements-build.txt  requirements-dev.txt
.github/workflows/: ci.yml
.reuse/: dep5
docs/: conf.py  index.rst  requirements.txt
papis_uefiscdi/: command.py  testing.py  uefiscdi.py
src/papis_uefiscdi/: command.py  config.py  logging.py  pdf.py  testing.py  uefiscdi.py  utils.py
test/: test_uefiscdi.py
