[project]
name = "papis-uefiscdi"
version = "0.1.0"
description = "Some simple plugins for papis"
readme = "README.md"
keywords = [
    "bibliography",
]
license = { text = "MIT" }
maintainers = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
authors = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "msoffcrypto-tool",
    "openpyxl",
    "papis>=0.13",
    "platformdirs",
    "pypdf",
    "pyperclip",
]
[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pip-tools",
    "pytest",
    "ruff",
    "types-beautifulsoup4",
    "types-python-slugify",
    "types-PyYAML",
    "types-requests",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-click",
]
[project.urls]
Repository = "https://github.com/alexfikl/papis-uefiscdi"
[project.entry-points."papis.command"]
uefiscdi = "papis_uefiscdi.command:cli"

[tool.setuptools]
packages = ["papis_uefiscdi"]

[tool.setuptools.package-data]
papis_extras = ["py.typed"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "wheel",
]

[tool.black]
line-length = 88
target-version = ['py38']
exclude='\.eggs|\.git|\.mypy_cache|build|dist|\.pytest_cache|\.pytype'

[tool.isort]
profile = "black"
balanced_wrapping = true
include_trailing_comma = true
known_first_party = ["papis"]

[tool.ruff]
preview = true
target-version = "py38"
line-length = 88
select = [
    "A",        # flake8-builtins
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "E",        # flake8
    "F",        # flake8
    "FBT",      # flake8-boolean-trap
    "G",        # flake8-logging-format
    "I",        # flake8-isort
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "PL",       # pylint
    "Q",        # flake8-quotes
    "RUF",      # ruff
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # flake8
]
ignore = [
    "E402",     # module-import-not-at-top-of-file
    "FBT001",   # boolean
    "I001",     # unsorted-imports
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
    "S101",     # assert
    "S102",     # exec-builtin
    "S311",
    "UP037",    # quoted-annotation
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "pyperclip.*",
]
ignore_missing_imports = true
