[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.10.0",
]

[project]
name = "papis-uefiscdi"
version = "0.1.0"
description = "Some simple plugins for papis"
readme = "README.rst"
keywords = [
    "bibliography",
]
license = { text = "MIT" }
maintainers = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
authors = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "msoffcrypto-tool",
    "openpyxl",
    "papis>=0.13",
    "platformdirs",
    "pypdf",
    "pyperclip",
    "titlecase",
]
[project.optional-dependencies]
dev = [
    "codespell",
    "mypy",
    "pytest",
    "reuse",
    "ruff",
    "types-beautifulsoup4",
    "types-openpyxl",
    "types-python-slugify",
    "types-PyYAML",
    "types-requests",
    "uv",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-click",
]
[project.urls]
Repository = "https://github.com/alexfikl/papis-uefiscdi"
[project.entry-points."papis.command"]
uefiscdi = "papis_uefiscdi.command:cli"
[project.entry-points."papis.explorer"]
uefiscdi = "papis_uefiscdi.command:explorer"

[tool.hatch.build.targets.sdist]
exclude = [".github", ".ci", "docs/_build"]

[tool.hatch.build.targets.wheel]
packages = ["src/papis_uefiscdi"]

[tool.ruff]
preview = true
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "A",        # flake8-builtins
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "E",        # flake8
    "F",        # flake8
    "FBT",      # flake8-boolean-trap
    "G",        # flake8-logging-format
    "I",        # flake8-isort
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "PL",       # pylint
    "Q",        # flake8-quotes
    "RUF",      # ruff
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # flake8
]
ignore = [
    "E402",     # module-import-not-at-top-of-file
    "FBT001",   # boolean
    "ISC001",   # single-line-implicit-string-concatenation
    "PLC0415",  # import-outside-top-level
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-locals
    "PLR0915",  # too-many-statements
    "PLR0917",  # too-many-positional
    "PLR2004",  # magic-value-comparison
    "S101",     # assert
    "S102",     # exec-builtin
    "S311",
    "UP037",    # quoted-annotation
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["papis", "papis_uefiscdi"]

[tool.mypy]
strict = true
hide_error_codes = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "colorama.*",
    "pyperclip.*",
    "titlecase.*",
    "msoffcrypto.*",
]
ignore_missing_imports = true
